--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,10 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
+
+    viewBinding{
+        enabled = true
+    }
 }
 
 dependencies {
